--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "~10.0.0",
     "@angular/cdk": "^10.0.0",
     "@angular/common": "~10.0.0",
@@ -24,10 +25,13 @@
     "@types/chart.js": "^2.9.22",
     "animate.css": "^4.1.0",
     "chart.js": "^2.5.0",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.5",
+    "save": "^2.4.0",
     "tslib": "^2.0.0",
+    "xlsx": "^0.16.3",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
