--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "@types/chart.js": "^2.9.22",
     "animate.css": "^4.1.0",
     "chart.js": "^2.5.0",
-    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.5",
     "save": "^2.4.0",
     "tslib": "^2.0.0",
-    "xlsx": "^0.16.3",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    // For Export functionality use these dependenies
+    "file-saver": "^2.0.2",
+    "xlsx": "^0.16.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
