--- a/package.json
+++ b/package.json
@@ -12,27 +12,32 @@
   "private": true,
   "dependencies": {
     "-": "0.0.1",
-    "@angular/animations": "~10.0.0",
-    "@angular/cdk": "^10.0.0",
+    "@angular/animations": "^10.0.7",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@fortawesome/fontawesome-free": "^5.13.1",
     "@types/chart.js": "^2.9.22",
     "animate.css": "^4.1.0",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.5.0",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
+    "jointjs": "^3.2.0",
+    "jquery": "^3.5.1",
+    "material-design-icons": "^3.0.1",
     "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.5",
     "save": "^2.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "file-saver": "^2.0.2",
-    "xlsx": "^0.16.3"
+    "xlsx": "^0.16.3",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
